changed gender and ethnicity visualizations to dynamic violin and bar visualizations based on tabs selected

--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,9 @@
 </head>
 <body> 
     <select id="visualizationSelect">
-        <option value="tab1">Gender Statistics</option>
-        <option value="tab2">Ethnicity Statistics</option>
+        <option value="tab1">Test Statistics By Groups</option>
+        <option value="tab2">Counts By Groups</option>
+        <option value="tab3">Correlation of Scores</option>
     </select>
     <div id="visualizationContainer"></div>
 
