--- a/views/index.html
+++ b/views/index.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D3.js Visualization</title>
+    <link rel="stylesheet" type="text/css" href="../public/css/style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/simple-statistics/7.0.0/simple-statistics.min.js"></script>
 </head>
-<body> 
-    <select id="visualizationSelect">
-        <option value="tab1">Test Statistics By Groups</option>
-        <option value="tab2">Counts By Groups</option>
-        <option value="tab3">Correlation of Scores</option>
-    </select>
-    <div id="visualizationContainer"></div>
+<body>
+    <div class="container">
+        <select id="visualizationSelect">
+            <option value="tab1">Test Statistics By Groups</option>
+            <option value="tab2">Counts By Groups</option>
+            <option value="tab3">Correlation of Scores</option>
+            <option value="tab4">Scatterplot Clustering</option>
+        </select>
+        <div id="visualizationContainer"></div>
 
-    <script type="module">
-        import {loadVisualization} from "../public/driver.js";
-        document.getElementById("visualizationSelect").addEventListener("change", loadVisualization);
-        loadVisualization();
-    </script>
+        <script type="module">
+            import {loadVisualization} from "../public/driver.js";
+
+            // Assign an onchange method to the selection
+            document.getElementById("visualizationSelect").addEventListener("change", loadVisualization);
+
+            // Initially call the loadVisualization function
+            loadVisualization();
+        </script>
+    </div>
 </body>
 </html>
